Added image,ingredients and steps to lemonade page

--- a/recipes/lemonade.html
+++ b/recipes/lemonade.html
@@ -9,5 +9,36 @@
 <body>
     <h1>This is a simple lemonade recipe</h1>
     <h3>When life gives you lemons, make the Best Lemonade Ever!</h3>
+    <img src="https://www.allrecipes.com/thmb/3jPembDGRufYWZZsN276uWpSvgA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/32385-best-lemonade-ever-DDMFS-4x3-8cef7761205e417499c89eb178e5ba2b.jpg" alt="Picture of a Lemonade">
+    <p>It couldn't be easier to make this homemade lemonade with just a few simple ingredients you probably already have on hand.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 ¾ cups white sugar</li>
+        <li>1 cup water</li>
+        <li>9 medium lemons, or more as needed</li>
+        <li>7 cups ice-cold water</li>
+        <li>ice as needed</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>
+            <h5>Juice Your Lemons</h5>
+            <p>Start by firmly rolling the lemons around on the counter. This will help release the juices and make your job a lot easier. Cut the lemon in half lengthwise, then squeeze out the juice by hand or with a juicer.
+
+                Make sure to juice the lemons over a large measuring cup so you can see exactly how much liquid you have.</p>    
+        </li>
+        <li>
+            <h5>Make a Simple Syrup</h5>
+            <p>It's shockingly simple to make simple syrup on the stove. Just combine sugar and water in a small saucepan, bring the mixture to a boil, and stir it until the sugar is dissolved.</p>
+        </li>
+        <li>
+            <h5>Stir</h5>
+            <p>Pour cold water into a pitcher. Stir in lemon juice and pulp, then add simple syrup to taste.</p>
+        </li>
+        <li>
+            <h5>Serve</h5>
+            <p>Serve over ice. If you're feeling fancy, garnish each glass with a fresh lemon slice or a candied lemon peel.</p>
+        </li>
+    </ol>
 </body>
 </html>
