--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     <h1>This is a simple Recipe website</h1>
+    <h3>Our recipes are listed below</h3>
+    <ul>
+        <li>
+            <a href="recipes/lemonade.html">Lemonade recipe</a>
+        </li>
+    </ul>
 </body>
 </html>
